--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -123,7 +123,7 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@setinews/live)
         EOL
-#華視新聞 CH52
+#華視新聞 CH52X
     - name: Get CtsTw.m3u8
       run: |
         touch ./CtsTw.m3u8
@@ -153,7 +153,7 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@TTV_NEWS/live)
         EOL
-#公視
+#公視X
     - name: Get ptslivestream.m3u8
       run: |
         touch ./ptslivestream.m3u8
