--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -91,7 +91,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/@Mr.Player/live)
+        $(yt-dlp --print urls https://www.youtube.com/watch?v=PpCKwiVHCfY)
         EOL
 #57東森財經新聞
     - name: Get 57EBC.m3u8
