--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -161,7 +161,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --proxy SOCKS4://111.253.129.118:4145 -g https://www.youtube.com/@ptslivestream/live)
+        $(yt-dlp --proxy SOCKS5://jdes6209:EgXe53xPNF@74.120.123.83:50101 -g https://www.youtube.com/@ptslivestream/live)
         EOL
 
 
