--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -171,7 +171,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp -f b --proxy SOCKS5://jdes6209:EgXe53xPNF@74.120.123.83:50101 -g https://www.youtube.com/watch?v=UK81GCw1KE8)
+        $(yt-dlp --geo-bypass -g https://www.youtube.com/watch?v=UK81GCw1KE8)
         EOL
 
 
