--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -161,7 +161,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --geo-verification-proxy jdes6209:EgXe53xPNF@74.120.123.83:50101 --geo-bypass-country TW -g https://www.youtube.com/@ptslivestream/live)
+        $(yt-dlp -g https://www.youtube.com/@ptslivestream/live --geo-verification-proxy jdes6209:EgXe53xPNF@74.120.123.83:50101)
         EOL
 #我們這一家
     - name: Get Our_family.m3u8
@@ -171,7 +171,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --geo-verification-proxy jdes6209:EgXe53xPNF@74.120.123.83:50101 --geo-bypass-country TW -g https://www.youtube.com/watch?v=UK81GCw1KE8)
+        $(yt-dlp -g https://www.youtube.com/watch?v=UK81GCw1KE8 --geo-verification-proxy jdes6209:EgXe53xPNF@74.120.123.83:50101)
         EOL
 
 
