--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -131,7 +131,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --proxy jdes6209:EgXe53xPNF@74.120.123.83:50101 -g https://www.youtube.com/@CtsTw/live)
+        $(yt-dlp --proxy SOCKS5://jdes6209:EgXe53xPNF@74.120.123.83:50101 -g https://www.youtube.com/@CtsTw/live)
         EOL
 #民視新聞
     - name: Get FTV_News.m3u8
@@ -161,7 +161,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp  --proxy jdes6209:EgXe53xPNF@181.215.45.238:50101 -g https://www.youtube.com/@ptslivestream/live)
+        $(yt-dlp -g https://www.youtube.com/@ptslivestream/live --geo-verification-proxy SOCKS5://jdes6209:EgXe53xPNF@74.120.123.83:50101)
         EOL
 #我們這一家
     - name: Get Our_family.m3u8
@@ -171,7 +171,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp ---proxy jdes6209:EgXe53xPNF@181.215.45.238:50101 -g https://www.youtube.com/watch?v=UK81GCw1KE8)
+        $(yt-dlp -g https://www.youtube.com/watch?v=UK81GCw1KE8 --geo-verification-proxy SOCKS5://jdes6209:EgXe53xPNF@181.215.45.238:50101)
         EOL
 
 
