--- a/.github/workflows/bil.yml
+++ b/.github/workflows/bil.yml
@@ -31,7 +31,7 @@ jobs:
         sudo cat >./Crayon_Shinchan1.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000
         $(python3 ./bilibili.py 26329057)
         EOL
 #蠟筆小新2
@@ -41,7 +41,7 @@ jobs:
         sudo cat >./Crayon_Shinchan2.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000
         $(python3 ./bilibili.py 10375360)
         EOL
 #蠟筆小新3
@@ -51,7 +51,7 @@ jobs:
         sudo cat >./Crayon_Shinchan3.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000
         $(python3 ./bilibili.py 26706595)
         EOL
 #蠟筆小新4
@@ -61,7 +61,7 @@ jobs:
         sudo cat >./Crayon_Shinchan4.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000
         $(python3 ./bilibili.py 27178028)
         EOL
 #名偵探柯南
@@ -71,7 +71,7 @@ jobs:
         sudo cat >./Conan.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000
         $(python3 ./bilibili.py 181453)
         EOL
 #小新多拉A夢小丸子柯南
@@ -81,7 +81,7 @@ jobs:
         sudo cat >./more_TV_24.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000
         $(python3 ./bilibili.py 21557299)
         EOL
 #多拉A夢1
@@ -91,7 +91,7 @@ jobs:
         sudo cat >./Doraemon1.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000
         $(python3 ./bilibili.py 14745943)
         EOL
 #多拉A夢2
@@ -101,7 +101,7 @@ jobs:
         sudo cat >./Doraemon2.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000
         $(python3 ./bilibili.py 27383329)
         EOL
 #多拉A夢3
@@ -111,7 +111,7 @@ jobs:
         sudo cat >./Doraemon3.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000
         $(python3 ./bilibili.py 27311355)
         EOL
 
