--- a/.github/workflows/douyu.yml
+++ b/.github/workflows/douyu.yml
@@ -22,7 +22,9 @@ jobs:
       run: |
         sudo curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp
         sudo chmod a+rx /usr/local/bin/yt-dlp
-
+    - name: Install PyExecJS
+      run: |
+        pip install PyExecJS
 ############################################Douyu鬥魚##############################################################
 #名偵探柯南
     - name: Get douyu_Conan.m3u8
