--- a/.github/workflows/allinone.yml
+++ b/.github/workflows/allinone.yml
@@ -27,150 +27,150 @@ jobs:
         pip install PyExecJS
 #######################################YOUTUBE####################################################   
 #鏡新聞
-    - name: Get mnews.m3u8
+    - name: Get yt_mnews.m3u8
       run: |
-        touch ./mnews.m3u8
-        sudo cat >./mnews.m3u8 <<EOL
+        touch ./yt_mnews.m3u8
+        sudo cat >./yt_mnews.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@mnews-tw/live)
         EOL
 #飢餓遊戲
-    - name: Get HungerGames.m3u8
+    - name: Get yt_HungerGames.m3u8
       run: |
-        touch ./HungerGames.m3u8
-        sudo cat >./HungerGames.m3u8 <<EOL
+        touch ./yt_HungerGames.m3u8
+        sudo cat >./yt_HungerGames.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@HungerGames123/live)
         EOL
 #歡喜玉玲龍
-    - name: Get Yulinglong.m3u8
+    - name: Get yt_Yulinglong.m3u8
       run: |
-        touch ./Yulinglong.m3u8
-        sudo cat >./Yulinglong.m3u8 <<EOL
+        touch ./yt_Yulinglong.m3u8
+        sudo cat >./yt_Yulinglong.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@ctvent_classic/live)
         EOL
 #寰宇新聞台1
-    - name: Get globalnewstw1.m3u8
+    - name: Get yt_globalnewstw1.m3u8
       run: |
-        touch ./globalnewstw1.m3u8
-        sudo cat >./globalnewstw1.m3u8 <<EOL
+        touch ./yt_globalnewstw1.m3u8
+        sudo cat >./yt_globalnewstw1.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@globalnewstw/live)
         EOL
 #寰宇新聞台2
-    - name: Get globalnewstw2.m3u8
+    - name: Get yt_globalnewstw2.m3u8
       run: |
-        touch ./globalnewstw2.m3u8
-        sudo cat >./globalnewstw2.m3u8 <<EOL
+        touch ./yt_globalnewstw2.m3u8
+        sudo cat >./yt_globalnewstw2.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/watch?v=B7Zp3d6xXWw)
         EOL
 #天才衝衝衝
-    - name: Get genius_rush_rush.m3u8
+    - name: Get yt_genius_rush_rush.m3u8
       run: |
-        touch ./genius_rush_rush.m3u8
-        sudo cat >./genius_rush_rush.m3u8 <<EOL
+        touch ./yt_genius_rush_rush.m3u8
+        sudo cat >./yt_genius_rush_rush.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@CTSSHOW/live)
         EOL
 #綜藝玩很大
-    - name: Get Mr_Player.m3u8
+    - name: Get yt_Mr_Player.m3u8
       run: |
-        touch ./Mr_Player.m3u8
-        sudo cat >./Mr_Player.m3u8 <<EOL
+        touch ./yt_Mr_Player.m3u8
+        sudo cat >./yt_Mr_Player.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/watch?v=PpCKwiVHCfY)
         EOL
 #57東森財經新聞
-    - name: Get 57EBC.m3u8
+    - name: Get yt_57EBC.m3u8
       run: |
-        touch ./57EBC.m3u8
-        sudo cat >./57EBC.m3u8 <<EOL
+        touch ./yt_57EBC.m3u8
+        sudo cat >./yt_57EBC.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@57ETFN/live)
         EOL
 #三立新聞台
-    - name: Get setnews.m3u8
+    - name: Get yt_setnews.m3u8
       run: |
-        touch ./setnews.m3u8
-        sudo cat >./setnews.m3u8 <<EOL
+        touch ./yt_setnews.m3u8
+        sudo cat >./yt_setnews.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@setnews/live)
         EOL
 #三立inews
-    - name: Get setinews.m3u8
+    - name: Get yt_setinews.m3u8
       run: |
-        touch ./setinews.m3u8
-        sudo cat >./setinews.m3u8 <<EOL
+        touch ./yt_setinews.m3u8
+        sudo cat >./yt_setinews.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@setinews/live)
         EOL
 #華視新聞 CH52
-    - name: Get CtsTw.m3u8
+    - name: Get yt_CtsTw.m3u8
       run: |
-        touch ./CtsTw.m3u8
-        sudo cat >./CtsTw.m3u8 <<EOL
+        touch ./yt_CtsTw.m3u8
+        sudo cat >./yt_CtsTw.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --proxy SOCKS5://jdes6209:EgXe53xPNF@74.120.123.83:50101 -g https://www.youtube.com/@CtsTw/live)
         EOL
 #民視新聞
-    - name: Get FTV_News.m3u8
+    - name: Get yt_FTV_News.m3u8
       run: |
-        touch ./FTV_News.m3u8
-        sudo cat >./FTV_News.m3u8 <<EOL
+        touch ./yt_FTV_News.m3u8
+        sudo cat >./yt_FTV_News.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp -g https://www.youtube.com/@FTV_News/live)
         EOL
 #台視新聞
-    - name: Get TTV_NEWS.m3u8
+    - name: Get yt_TTV_NEWS.m3u8
       run: |
-        touch ./TTV_NEWS.m3u8
-        sudo cat >./TTV_NEWS.m3u8 <<EOL
+        touch ./yt_TTV_NEWS.m3u8
+        sudo cat >./yt_TTV_NEWS.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@TTV_NEWS/live)
         EOL
 #公視X
-    - name: Get ptslivestream.m3u8
+    - name: Get yt_ptslivestream.m3u8
       run: |
-        touch ./ptslivestream.m3u8
-        sudo cat >./ptslivestream.m3u8 <<EOL
+        touch ./yt_ptslivestream.m3u8
+        sudo cat >./yt_ptslivestream.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --proxy SOCKS5://jdes6209:EgXe53xPNF@181.215.45.238:50101 -g https://www.youtube.com/@ptslivestream/live)
         EOL
 #我們這一家
-    - name: Get Our_family.m3u8
+    - name: Get yt_Our_family.m3u8
       run: |
-        touch ./Our_family.m3u8
-        sudo cat >./Our_family.m3u8 <<EOL
+        touch ./yt_Our_family.m3u8
+        sudo cat >./yt_Our_family.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
@@ -181,90 +181,90 @@ jobs:
 ############################################################################################################
 ############################################bilbil##############################################################
 #蠟筆小新1
-    - name: Get Crayon_Shinchan1.m3u8
+    - name: Get bilbil_Crayon_Shinchan1.m3u8
       run: |
-        touch ./Crayon_Shinchan1.m3u8
-        sudo cat >./Crayon_Shinchan1.m3u8 <<EOL
+        touch ./bilbil_Crayon_Shinchan1.m3u8
+        sudo cat >./bilbil_Crayon_Shinchan1.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(python3 ./bilibili.py 26329057)
         EOL
 #蠟筆小新2
-    - name: Get Crayon_Shinchan2.m3u8
+    - name: Get bilbil_Crayon_Shinchan2.m3u8
       run: |
-        touch ./Crayon_Shinchan2.m3u8
-        sudo cat >./Crayon_Shinchan2.m3u8 <<EOL
+        touch ./bilbil_Crayon_Shinchan2.m3u8
+        sudo cat >./bilbil_Crayon_Shinchan2.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(python3 ./bilibili.py 10375360)
         EOL
 #蠟筆小新3
-    - name: Get Crayon_Shinchan3.m3u8
+    - name: Get bilbil_Crayon_Shinchan3.m3u8
       run: |
-        touch ./Crayon_Shinchan3.m3u8
-        sudo cat >./Crayon_Shinchan3.m3u8 <<EOL
+        touch ./bilbil_Crayon_Shinchan3.m3u8
+        sudo cat >./bilbil_Crayon_Shinchan3.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(python3 ./bilibili.py 26706595)
         EOL
 #蠟筆小新4
-    - name: Get Crayon_Shinchan4.m3u8
+    - name: Get bilbil_Crayon_Shinchan4.m3u8
       run: |
-        touch ./Crayon_Shinchan4.m3u8
-        sudo cat >./Crayon_Shinchan4.m3u8 <<EOL
+        touch ./bilbil_Crayon_Shinchan4.m3u8
+        sudo cat >./bilbil_Crayon_Shinchan4.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(python3 ./bilibili.py 27178028)
         EOL
 #名偵探柯南
-    - name: Get Conan.m3u8
+    - name: Get bilbil_Conan.m3u8
       run: |
-        touch ./Conan.m3u8
-        sudo cat >./Conan.m3u8 <<EOL
+        touch ./bilbil_Conan.m3u8
+        sudo cat >./bilbil_Conan.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(python3 ./bilibili.py 181453)
         EOL
 #小新多拉A夢小丸子柯南
-    - name: Get more_TV_24.m3u8
+    - name: Get bilbil_more_TV_24.m3u8
       run: |
-        touch ./more_TV_24.m3u8
-        sudo cat >./more_TV_24.m3u8 <<EOL
+        touch ./bilbil_more_TV_24.m3u8
+        sudo cat >./bilbil_more_TV_24.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(python3 ./bilibili.py 21557299)
         EOL
 #多拉A夢1
-    - name: Get Doraemon1.m3u8
+    - name: Get bilbil_Doraemon1.m3u8
       run: |
-        touch ./Doraemon1.m3u8
-        sudo cat >./Doraemon1.m3u8 <<EOL
+        touch ./bilbil_Doraemon1.m3u8
+        sudo cat >./bilbil_Doraemon1.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(python3 ./bilibili.py 14745943)
         EOL
 #多拉A夢2
-    - name: Get Doraemon2.m3u8
+    - name: Get bilbil_Doraemon2.m3u8
       run: |
-        touch ./Doraemon2.m3u8
-        sudo cat >./Doraemon2.m3u8 <<EOL
+        touch ./bilbil_Doraemon2.m3u8
+        sudo cat >./bilbil_Doraemon2.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(python3 ./bilibili.py 27383329)
         EOL
 #多拉A夢3
-    - name: Get Doraemon3.m3u8
+    - name: Get bilbil_Doraemon3.m3u8
       run: |
-        touch ./Doraemon3.m3u8
-        sudo cat >./Doraemon3.m3u8 <<EOL
+        touch ./bilbil_Doraemon3.m3u8
+        sudo cat >./bilbil_Doraemon3.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
