--- a/.github/workflows/allinone.yml
+++ b/.github/workflows/allinone.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Install PyExecJS
       run: |
         pip install PyExecJS
+    - name: Install streamlink
+      run: |
+        pip install streamlink
 #######################################YOUTUBE####################################################   
 #鏡新聞
     - name: Get yt_mnews.m3u8
@@ -156,31 +159,31 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/@TTV_NEWS/live)
         EOL
-#公視X
-    - name: Get yt_ptslivestream.m3u8
-      run: |
-        touch ./yt_ptslivestream.m3u8
-        sudo cat >./yt_ptslivestream.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --proxy SOCKS5://jdes6209:EgXe53xPNF@181.215.45.238:50101 -g https://www.youtube.com/@ptslivestream/live)
-        EOL
-#我們這一家
-    - name: Get yt_Our_family.m3u8
-      run: |
-        touch ./yt_Our_family.m3u8
-        sudo cat >./yt_Our_family.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --proxy SOCKS5://jdes6209:EgXe53xPNF@181.215.45.238:50101 -g https://www.youtube.com/watch?v=UK81GCw1KE8)
-        EOL
+# #公視X
+#     - name: Get yt_ptslivestream.m3u8
+#       run: |
+#         touch ./yt_ptslivestream.m3u8
+#         sudo cat >./yt_ptslivestream.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(yt-dlp --proxy SOCKS5://jdes6209:EgXe53xPNF@181.215.45.238:50101 -g https://www.youtube.com/@ptslivestream/live)
+#         EOL
+# #我們這一家
+#     - name: Get yt_Our_family.m3u8
+#       run: |
+#         touch ./yt_Our_family.m3u8
+#         sudo cat >./yt_Our_family.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(yt-dlp --proxy SOCKS5://jdes6209:EgXe53xPNF@181.215.45.238:50101 -g https://www.youtube.com/watch?v=UK81GCw1KE8)
+#         EOL
 
 
 ############################################################################################################
 ############################################bilbil##############################################################
-#蠟筆小新1
+#蠟筆小新1s
     - name: Get bilbil_Crayon_Shinchan1.m3u8
       run: |
         touch ./bilbil_Crayon_Shinchan1.m3u8
@@ -188,114 +191,124 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./bilibili.py 26329057)
+        $(streamlink --default-stream best --stream-url https://live.bilibili.com/26329057)
         EOL
-#蠟筆小新2
-    - name: Get bilbil_Crayon_Shinchan2.m3u8
-      run: |
-        touch ./bilbil_Crayon_Shinchan2.m3u8
-        sudo cat >./bilbil_Crayon_Shinchan2.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./bilibili.py 10375360)
-        EOL
-#蠟筆小新3
-    - name: Get bilbil_Crayon_Shinchan3.m3u8
-      run: |
-        touch ./bilbil_Crayon_Shinchan3.m3u8
-        sudo cat >./bilbil_Crayon_Shinchan3.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./bilibili.py 26706595)
-        EOL
-#蠟筆小新4
-    - name: Get bilbil_Crayon_Shinchan4.m3u8
-      run: |
-        touch ./bilbil_Crayon_Shinchan4.m3u8
-        sudo cat >./bilbil_Crayon_Shinchan4.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./bilibili.py 27178028)
-        EOL
-#名偵探柯南
-    - name: Get bilbil_Conan.m3u8
-      run: |
-        touch ./bilbil_Conan.m3u8
-        sudo cat >./bilbil_Conan.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./bilibili.py 181453)
-        EOL
-#小新多拉A夢小丸子柯南
-    - name: Get bilbil_more_TV_24.m3u8
-      run: |
-        touch ./bilbil_more_TV_24.m3u8
-        sudo cat >./bilbil_more_TV_24.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./bilibili.py 21557299)
-        EOL
-#多拉A夢1
-    - name: Get bilbil_Doraemon1.m3u8
-      run: |
-        touch ./bilbil_Doraemon1.m3u8
-        sudo cat >./bilbil_Doraemon1.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./bilibili.py 14745943)
-        EOL
-#多拉A夢2
-    - name: Get bilbil_Doraemon2.m3u8
-      run: |
-        touch ./bilbil_Doraemon2.m3u8
-        sudo cat >./bilbil_Doraemon2.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./bilibili.py 27383329)
-        EOL
-#多拉A夢3
-    - name: Get bilbil_Doraemon3.m3u8
-      run: |
-        touch ./bilbil_Doraemon3.m3u8
-        sudo cat >./bilbil_Doraemon3.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./bilibili.py 27311355)
-        EOL
+# #蠟筆小新1
+#     - name: Get bilbil_Crayon_Shinchan1.m3u8
+#       run: |
+#         touch ./bilbil_Crayon_Shinchan1.m3u8
+#         sudo cat >./bilbil_Crayon_Shinchan1.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./bilibili.py 26329057)
+#         EOL
+# #蠟筆小新2
+#     - name: Get bilbil_Crayon_Shinchan2.m3u8
+#       run: |
+#         touch ./bilbil_Crayon_Shinchan2.m3u8
+#         sudo cat >./bilbil_Crayon_Shinchan2.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./bilibili.py 10375360)
+#         EOL
+# #蠟筆小新3
+#     - name: Get bilbil_Crayon_Shinchan3.m3u8
+#       run: |
+#         touch ./bilbil_Crayon_Shinchan3.m3u8
+#         sudo cat >./bilbil_Crayon_Shinchan3.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./bilibili.py 26706595)
+#         EOL
+# #蠟筆小新4
+#     - name: Get bilbil_Crayon_Shinchan4.m3u8
+#       run: |
+#         touch ./bilbil_Crayon_Shinchan4.m3u8
+#         sudo cat >./bilbil_Crayon_Shinchan4.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./bilibili.py 27178028)
+#         EOL
+# #名偵探柯南
+#     - name: Get bilbil_Conan.m3u8
+#       run: |
+#         touch ./bilbil_Conan.m3u8
+#         sudo cat >./bilbil_Conan.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./bilibili.py 181453)
+#         EOL
+# #小新多拉A夢小丸子柯南
+#     - name: Get bilbil_more_TV_24.m3u8
+#       run: |
+#         touch ./bilbil_more_TV_24.m3u8
+#         sudo cat >./bilbil_more_TV_24.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./bilibili.py 21557299)
+#         EOL
+# #多拉A夢1
+#     - name: Get bilbil_Doraemon1.m3u8
+#       run: |
+#         touch ./bilbil_Doraemon1.m3u8
+#         sudo cat >./bilbil_Doraemon1.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./bilibili.py 14745943)
+#         EOL
+# #多拉A夢2
+#     - name: Get bilbil_Doraemon2.m3u8
+#       run: |
+#         touch ./bilbil_Doraemon2.m3u8
+#         sudo cat >./bilbil_Doraemon2.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./bilibili.py 27383329)
+#         EOL
+# #多拉A夢3
+#     - name: Get bilbil_Doraemon3.m3u8
+#       run: |
+#         touch ./bilbil_Doraemon3.m3u8
+#         sudo cat >./bilbil_Doraemon3.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./bilibili.py 27311355)
+#         EOL
 
 
 
 
 ############################################################################################################
 ############################################huya虎牙##############################################################
-#海蓮寶寶1
-    - name: Get huya_spongebob1.m3u8
-      run: |
-        touch ./huya_spongebob1.m3u8
-        sudo cat >./huya_spongebob1.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./huya.py 20301656)
-        EOL
-#海蓮寶寶1
-    - name: Get huya_spongebob2.m3u8
-      run: |
-        touch ./huya_spongebob2.m3u8
-        sudo cat >./huya_spongebob2.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./huya.py 19552901)
-        EOL
+# #海蓮寶寶1
+#     - name: Get huya_spongebob1.m3u8
+#       run: |
+#         touch ./huya_spongebob1.m3u8
+#         sudo cat >./huya_spongebob1.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./huya.py 20301656)
+#         EOL
+# #海蓮寶寶1
+#     - name: Get huya_spongebob2.m3u8
+#       run: |
+#         touch ./huya_spongebob2.m3u8
+#         sudo cat >./huya_spongebob2.m3u8 <<EOL
+#         #EXTM3U
+#         #EXT-X-VERSION:3
+#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+#         $(python3 ./huya.py 19552901)
+#         EOL
 
 
 
