--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         鏡新聞,$(yt-dlp --print urls https://www.youtube.com/@mnews-tw/live)
-        飢餓遊戲$(yt-dlp --print urls https://www.youtube.com/@HungerGames123/live)
+        飢餓遊戲,$(yt-dlp --print urls https://www.youtube.com/@HungerGames123/live)
         EOL
 # #鏡新聞
 #     - name: Get yt_mnews.m3u8
