--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,11 +33,9 @@ jobs:
     - name: Get test.txt
       run: |
         touch ./test.txt
-        sudo cat >./test.txt
-        鏡新聞,
-        $(yt-dlp --print urls https://www.youtube.com/@mnews-tw/live)
-        飢餓遊戲,
-        $(yt-dlp --print urls https://www.youtube.com/@HungerGames123/live)
+        sudo cat >./test.txt <<EOL
+        鏡新聞,$(yt-dlp --print urls https://www.youtube.com/@mnews-tw/live)
+        飢餓遊戲,$(yt-dlp --print urls https://www.youtube.com/@HungerGames123/live)
         EOL
 # #鏡新聞
 #     - name: Get yt_mnews.m3u8
